most likely coming soonish

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-
+  <h1>Most Likely Coming Soonish</h1>
+  <img class="chair" src="img/chair.png" alt="A photograph of a chair">
+  <img class="logo" src="img/logo.png" alt="Behavé logo">
 </body>
 </html>
