add g-suite verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="google-site-verification" content="KO99xuG1-X788bqZLOhWdHJX15ijyRi0FykhLNnyu5E" />
 </head>
 <body>
   <h1>Most Likely Coming Soonish</h1>
