--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <meta name="google-site-verification" content="KO99xuG1-X788bqZLOhWdHJX15ijyRi0FykhLNnyu5E" />
 </head>
 <body>
-  <h1>Most Likely Coming Soonish</h1>
-  <img class="chair" src="img/chair.png" alt="A photograph of a chair">
-  <img class="logo" src="img/logo.png" alt="Behavé logo">
+  <img class="photo" src="img/photo.jpg" alt="A photograph containing aspects of the Lifestyle">
+  <img class="logo" src="img/logo.svg" alt="Behavé logo">
 </body>
 </html>
