--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
   <img class="photo" src="img/photo.jpg" alt="A photograph containing aspects of the Lifestyle">
+  <img class="photo" src="img/photo2.jpg" alt="A photograph containing aspects of the Lifestyle">
+  <img class="photo" src="img/photo3.jpg" alt="A photograph containing aspects of the Lifestyle">
+  <img class="photo" src="img/photo4.jpg" alt="A photograph containing aspects of the Lifestyle">
+  <img class="photo" src="img/photo5.jpg" alt="A photograph containing aspects of the Lifestyle">
   <img class="logo" src="img/logo.svg" alt="Behavé logo">
 </body>
 </html>
