--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="google-site-verification" content="KO99xuG1-X788bqZLOhWdHJX15ijyRi0FykhLNnyu5E" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <img class="photo" src="img/photo.jpg" alt="A photograph containing aspects of the Lifestyle">
