--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <img class="photo" src="img/photo.jpg" alt="A photograph containing aspects of the Lifestyle">
-  <img class="photo" src="img/photo2.jpg" alt="A photograph containing aspects of the Lifestyle">
-  <img class="photo" src="img/photo3.jpg" alt="A photograph containing aspects of the Lifestyle">
-  <img class="photo" src="img/photo4.jpg" alt="A photograph containing aspects of the Lifestyle">
-  <img class="photo" src="img/photo5.jpg" alt="A photograph containing aspects of the Lifestyle">
-  <img class="logo" src="img/logo.svg" alt="Behavé logo">
+  <img class="logo" src="img/behave-logo-blad-2.gif" alt="Behavé logo">
 </body>
 </html>
